// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin-cli help snapshots > actors --help 1`] = `
"Usage: admin-cli actors [options] [command]

Actor management

Options:
  -h, --help                                             display help for command

Commands:
  merge [options] <primary_address> <secondary_address>  Merge two actor identities (destructive)
  show [options] <address>                               Show actor identity, addresses, merge state, and inbound redirects
  address                                                Actor address management
  help [command]                                         display help for command
"
`;

exports[`admin-cli help snapshots > actors merge --help 1`] = `
"Usage: admin-cli actors merge [options] <primary_address> <secondary_address>

Merge two actor identities (destructive)

Options:
  --reason <text>    human-readable rationale for the merge (required, max 4KB)
  --confirm          confirm destructive operation
  --production       acknowledge production environment
  --dry-run          show what would happen without making changes
  --format <format>  output format: human or json
  -h, --help         display help for command
"
`;

exports[`admin-cli help snapshots > actors show --help 1`] = `
"Usage: admin-cli actors show [options] <address>

Show actor identity, addresses, merge state, and inbound redirects

Options:
  --format <format>  output format: human or json
  -h, --help         display help for command
"
`;

exports[`admin-cli help snapshots > ai --help 1`] = `
"Usage: admin-cli ai [options] [command]

AI feature management

Options:
  -h, --help                                         display help for command

Commands:
  disable [options] <feature>                        Disable an AI feature
  enable [options] <feature>                         Enable an AI feature
  cap                                                AI spending cap management
  regenerate [options] <feature> <entity_reference>  Regenerate AI output for an entity
  help [command]                                     display help for command
"
`;

exports[`admin-cli help snapshots > audits --help 1`] = `
"Usage: admin-cli audits [options] [command]

Audit log access

Options:
  -h, --help      display help for command

Commands:
  list [options]  List audit log entries
  help [command]  display help for command
"
`;

exports[`admin-cli help snapshots > audits list --help 1`] = `
"Usage: admin-cli audits list [options]

List audit log entries

Options:
  --format <format>  output format: human or json
  -h, --help         display help for command
"
`;

exports[`admin-cli help snapshots > backfill --help 1`] = `
"Usage: admin-cli backfill [options] [command]

Backfill management

Options:
  -h, --help                        display help for command

Commands:
  start [options] <source_type>     Start a backfill for a DAO source
  catch-up [options] <source_type>  Run startup-style gap fill for an existing
                                    DAO source
  help [command]                    display help for command
"
`;

exports[`admin-cli help snapshots > daos --help 1`] = `
"Usage: admin-cli daos [options] [command]

DAO management

Options:
  -h, --help            display help for command

Commands:
  add [options] <slug>  Register a new DAO
  source                DAO source management
  help [command]        display help for command
"
`;

exports[`admin-cli help snapshots > daos source --help 1`] = `
"Usage: admin-cli daos source [options] [command]

DAO source management

Options:
  -h, --help                        display help for command

Commands:
  add [options] <dao_slug>          Add a data source to a DAO
  update [options] <dao_source_id>  Update a DAO source configuration
  delete [options] <dao_source_id>  Delete a DAO source (destructive)
  help [command]                    display help for command
"
`;

exports[`admin-cli help snapshots > derive --help 1`] = `
"Usage: admin-cli derive [options] [command]

Derived data management

Options:
  -h, --help                               display help for command

Commands:
  replay [options] <dao_source_id>         Replay derivation for a DAO source (destructive)
  verify [options] <proposal_external_id>  Verify derived data for a proposal
  help [command]                           display help for command
"
`;

exports[`admin-cli help snapshots > dlq --help 1`] = `
"Usage: admin-cli dlq [options] [command]

Dead-letter queue management

Options:
  -h, --help                 display help for command

Commands:
  list [options]             List DLQ entries
  retry [options] <dlq_id>   Retry a DLQ entry
  accept [options] <dlq_id>  Accept (discard) a DLQ entry with a recorded reason
  help [command]             display help for command
"
`;

exports[`admin-cli help snapshots > keys --help 1`] = `
"Usage: admin-cli keys [options] [command]

API key management

Options:
  -h, --help                  display help for command

Commands:
  create [options] <user_id>  Create API key for user
  list [options]              List API keys
  revoke [options] <key_id>   Revoke an API key
  ban-ip [options] <ip>       Ban an IP address (destructive)
  help [command]              display help for command
"
`;

exports[`admin-cli help snapshots > maintenance --help 1`] = `
"Usage: admin-cli maintenance [options] [command]

Maintenance mode management

Options:
  -h, --help         display help for command

Commands:
  enable [options]   Enable maintenance mode
  disable [options]  Disable maintenance mode
  help [command]     display help for command
"
`;

exports[`admin-cli help snapshots > status --help 1`] = `
"Usage: admin-cli status [options]

Show system status

Options:
  --format <format>  output format: human or json
  -h, --help         display help for command
"
`;

exports[`admin-cli help snapshots > top-level --help 1`] = `
"Usage: admin-cli [options] [command]

Kvorum operator administration CLI

Options:
  -V, --version          output the version number
  -f, --format <format>  output format: human or json (default: "human")
  -h, --help             display help for command

Commands:
  actors                 Actor management
  ai                     AI feature management
  audits                 Audit log access
  backfill               Backfill management
  daos                   DAO management
  derive                 Derived data management
  dlq                    Dead-letter queue management
  keys                   API key management
  maintenance            Maintenance mode management
  status [options]       Show system status
  snapshot               Voting power snapshot operations
  users                  User management
  help [command]         display help for command
"
`;

exports[`admin-cli help snapshots > users --help 1`] = `
"Usage: admin-cli users [options] [command]

User management

Options:
  -h, --help                  display help for command

Commands:
  list [options]              List users
  ban [options] <user_id>     Ban a user (destructive)
  delete [options] <user_id>  Delete a user account (destructive)
  create [options]            Create a new user account
  update [options] <user_id>  Update a user account
  help [command]              display help for command
"
`;
